--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <title>Ara's Portfolio Website</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
+        
+        <!-- Update these with your own fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="css/style.css">
+   
     </head>
     <body>
         <header>
@@ -30,8 +36,8 @@
             <h1 class="section__title section__title--intro">
                 Hi, I am <strong>Ara Cho</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-            <img src="img/dev-jane-01.jpg" alt="a picture of myself">
+            <p class="section__subtitle section__subtitle--intro">Software Developer from Seoul, Korea</p>
+            <img src="img/me-profile.jpeg" alt="a picture of myself">
         </section>
 
         <!-- My services -->
@@ -58,14 +64,14 @@
 
         <!-- About me -->
         <section class ="about-me" id="about">
-            <h2 class="section__title section_title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about"></p>
-
+            <h2 class="section__title section__title--about">Who I am</h2>
+            <p class="section__subtitle section__subtitle--about">I want to connect the world through programming</p>
             <div class="about-me__body">
-                <p>text</p>
+                <p>I want to..</p>
+                <p>Programming has helped me express my creativity.</p>
             </div>
 
-            <img src="img/dev-jane-02.jpg" alt="Jane leaning against a bus">
+            <img src="img/me-photo2.jpeg" alt="">
         </section>
 
         <!-- My Work -->
