updates on css and index

--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
         </header>
 
         <!-- Introduction -->
-        <section class="intro" id="home"></section>
+
+        <section class="intro" id="home">
             <h1 class="section__title section__title--intro">
                 Hi, I am <strong>Ara Cho</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Software Developer from Seoul, Korea</p>
-            <img src="img/me-profile.jpeg" alt="a picture of myself">
+            <p class="section__subtitle section__subtitle--intro">Software Dev in London</p>
+            <img src="img/me-profile.jpeg" alt="a picture of myself" class="intro__img">
         </section>
 
         <!-- My services -->
+
         <section class="my-services" id="services">
             <h2 class="section__title section__title--services">What I do</h2>
             <div class="services">
