--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="img/devjane.png" alt="">
+                <img src="#" alt="">
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
@@ -26,7 +26,7 @@
                     <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
                     <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
+                    <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
                 </ul>
             </nav>
         </header>
@@ -37,8 +37,8 @@
             <h1 class="section__title section__title--intro">
                 Hi, I am <strong>Ara Cho</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Software Dev in London</p>
-            <img src="img/me-profile.jpeg" alt="a picture of myself" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro">Junior Software Dev</p>
+            <img src="img/me-photo2.jpeg" alt="a picture of myself" class="intro__img">
         </section>
 
         <!-- My services -->
@@ -47,18 +47,18 @@
             <h2 class="section__title section__title--services">What I do</h2>
             <div class="services">
                 <div class="service">
-                    <h3>text</h3>
-                    <p> text </p>
+                    <h3>HTML, CSS and Javascript</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div> <!-- / service -->
 
                 <div class="service">
-                    <h3>text</h3>
-                    <p>text</p>
+                    <h3>ljskjfl;askfjslfjslf;js;fl</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div> <!-- / service -->  
 
                 <div class="service">
-                    <h3>text</h3>
-                    <p>text</p>
+                    <h3>sdfasfasfsfs</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div> <!-- / service -->
 
                 <a href="#work" class="btn">My Work</a>
@@ -67,13 +67,13 @@
         <!-- About me -->
         <section class ="about-me" id="about">
             <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about">I want to connect the world through programming</p>
+            <p class="section__subtitle section__subtitle--about">Self-taught programming student from Seoul</p>
             <div class="about-me__body">
                 <p>I want to..</p>
                 <p>Programming has helped me express my creativity.</p>
             </div>
 
-            <img src="img/me-photo2.jpeg" alt="">
+            <img src="img/me-profile.jpeg" alt="">
         </section>
 
         <!-- My Work -->
@@ -89,22 +89,22 @@
 
                 <!-- Portfolio item 02-->
                 <a href="#" class="portfolio__item">
-                        <img src="img/portfolio-02.jpg" alt="" class="portfolio__img">
+                    <img src="img/portfolio-02.jpg" alt="" class="portfolio__img">
                 </a>
 
-                 <!-- Portfolio item 03-->
-                 <a href="#" class="portfolio__item">
-                        <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
+                <!-- Portfolio item 03-->
+                <a href="#" class="portfolio__item">
+                    <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
                 </a>
 
                 <!-- Portfolio item 04-->
                 <a href="#" class="portfolio__item">
-                        <img src="img/portfolio-04.jpg" alt="" class="portfolio__img">
+                    <img src="img/portfolio-04.jpg" alt="" class="portfolio__img">
                 </a>
 
                 <!-- Portfolio item 05-->
                 <a href="#" class="portfolio__item">
-                        <img src="img/portfolio-05.jpg" alt="" class="portfolio__img">
+                    <img src="img/portfolio-05.jpg" alt="" class="portfolio__img">
                 </a>
 
             </div>
@@ -116,11 +116,12 @@
             <!-- replace with your own email address -->
             <a href="mailto:jarjeb@gmail.com" class="footer__link">jarjeb@gmail.com</a>
             <ul class="social-list">
-                <li class="social-list__item"><a class="social-list__link" href="https://codepen.io">a</a></li>
-                <li class="social-list__item"><a class="social-list__link" href="https://www.instagram.com/">b</a></li>
-                <li class="social-list__item"><a class="social-list__link" href="https://facebook.com/">c</a></li>
-                <li class="social-list__item"><a class="social-list__link" href="https://linkedin.com/">d</a></li>
+                <li class="social-list__item"><a class="social-list__link" href="https://github.com">Github</a></li>
+                <li class="social-list__item"><a class="social-list__link" href="https://linkedin.com/">Linkedin</a></li>
+                <li class="social-list__item"><a class="social-list__link" href="https://instagram.com/">Instagram</a></li>
             </ul>
         </footer>
+
+
     </body>
 </html>
