--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </ul>
         </footer>
 
-        <script src="js/index/js"></script>
+        <script src="js/index.js"></script>
 
     </body>
 </html>
