--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
             <div class="portfolio">
                 <!-- Portfolio item 01-->
-                <a href="#" class="portfolio__item">
+                <a href="portfolio-item.html" class="portfolio__item">
                     <img src="img/portfolio-01.jpg" alt="" class="portfolio__img">
                 </a>
 
@@ -118,7 +118,7 @@
             <a href="mailto:jarjeb@gmail.com" class="footer__link">jarjeb@gmail.com</a>
             <ul class="social-list">
                 <li class="social-list__item">
-                    <a class="social-list__link" href="https://github.com">
+                    <a class="social-list__link" href="https://github.com/aracho1">
                         <i class="fab fa-github"></i>
                     </a>
                     
